--- a/.github/workflows/daily-news.yml
+++ b/.github/workflows/daily-news.yml
@@ -3,8 +3,8 @@ name: Daily News Email
 on:
   schedule:
     # Run at 19:00 and 20:00 UTC daily to cover AEST/AEDT; we'll gate to 06:00 Sydney below
+    - cron: "0 18 * * *"
     - cron: "0 19 * * *"
-    - cron: "0 20 * * *"
   workflow_dispatch: {}
 
 permissions:
@@ -21,10 +21,10 @@ jobs:
           echo "LOCAL_HOUR=$(date +%H)" >> $GITHUB_ENV
           echo "Local Sydney time is $(date)"
 
-      - name: Skip unless it's 06:00 in Sydney
-        if: env.LOCAL_HOUR != '06'
+      - name: Skip unless it's 05:00 in Sydney
+        if: env.LOCAL_HOUR != '05'
         run: |
-          echo "Not 06:00 Sydney time (it's $LOCAL_HOUR:xx). Exiting."
+          echo "Not 05:00 Sydney time (it's $LOCAL_HOUR:xx). Exiting."
           exit 0
 
       - name: Checkout code
@@ -39,6 +39,13 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+
+      - name: Install Ollama
+        run: |
+          curl -fsSL https://ollama.ai/install.sh | sh
+          ollama serve &
+          sleep 10  # Wait for server to start
+          ollama pull llama3
 
       - name: Ensure jq is available
         run: |
